tests/tooling/fixtures/native/recovery/negative/negative_switch_case_global_assigned_conservative_reject.objc3
// Negative fixture: assigned global identifier conditions remain conservative in switch case-body return-path analysis.
// Expected diagnostic code(s): O3S205.
module NegativeSwitchCaseGlobalAssignedConservativeReject;

let globalFlag = 0;

fn setFlag() -> i32 {
  globalFlag = 1;
  return 0;
}

fn main() -> i32 {
  let value = 1;
  setFlag();
  switch (value) {
    case 1:
      while (globalFlag) {
        return 9;
      }
    case 2:
      return 42;
    default:
      return 7;
  }
}
